--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e787dbd1-5b0f-4874-9ecc-bafa0b6087be"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
